# aira_backend

./: .env.example  .gitignore  .pre_commit_config.yaml  Dockerfile  GETTING_STARTED.md  Makefile  README.md  __init__.py  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
app/: app_instance.py  config.py  main.py
app/api/: decorators.py
app/api/v1/: auth.py  citations.py  knowledge.py  monitoring.py  papers.py  search.py  users.py
app/core/: analytics.py  app_logging.py  config.py  security.py  security_utils.py
app/db/: database.py  models.py
app/db/queries/: paper_queries.py  user_queries.py
app/schemas/: auth.py  knowledge.py  paper.py  user.py
app/services/: ai_service.py  celery_app.py  celery_tasks.py  citation_service.py  knowledge_service.py  paper_service.py  pdf_processor.py
scripts/: dev_commands.py  generate_docs.py  load_sample_data.py
tests/: conftest.py
tests/integration/: test_auth_flow.py
tests/unit/services/: test_ai_service.py
